[package]
name = "wplace-core-library"
version = "0.1.0"
edition = "2024"

[dependencies]
async-curl = "0.4.7"
curl = "0.4.49"
geojson = "0.24.2"
image = "0.25.8"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "*", features = ["full"] }
